# ulogd

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  prek.toml
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: test.rs
src/: main.rs  utils.rs
src/models/: db.rs  log.rs  mod.rs  models.rs  queries.rs
